--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,4 +8,5 @@
     Published {{ post.publish }} by {{ post.author }}
 </p>
 {{ post.body|linebreaks }}
+    <p><a href="{% url 'post_share' post.id %}">Share post</a></p>
 {% endblock content %}
