--- a/templates/detail.html
+++ b/templates/detail.html
@@ -8,5 +8,31 @@
     Published {{ post.publish }} by {{ post.author }}
 </p>
 {{ post.body|linebreaks }}
-    <p><a href="{% url 'post_share' post.id %}">Share post</a></p>
+    <p><a href="{% url 'blog:post_share' post.id %}">Share post</a></p>
+
+{% with comments.count as total_comments %}
+    <h2>{{ total_comments }} comment{{ total_comments|pluralize }}</h2>
+{% endwith %}
+{% for comment in comments %}
+    <div class="comment">
+        <p class="info">
+            Comment {{ forloop.counter }} by {{ comment.name }}
+            {{ comment.created }}
+        </p>
+        {{ comment.body|linebreaks }}
+    </div>
+{% empty %}
+    <p>There are no comments available.</p>
+{% endfor %}
+
+{% if new_comment %}
+    <h2>Your comment has been added.</h2>
+{% else %}
+    <h2>Add a new comment</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ comment_form.as_p }}
+        <p><input type="submit" value="Add Comment"></p>
+    </form>
+{% endif %}
 {% endblock content %}
