--- a/templates/list.html
+++ b/templates/list.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
-{% block title %}Consectetur adipisicing elit. Saepe, autem! {% endblock title %}
+{% block title %}Consectetur adipisicing elit. Saepe, autem!
+{% endblock title %}
+
+
 
 {% block content %}
 <h1>TECHVILLA</h1>
