--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,9 @@
         <p>Post written so far - {% total_posts %}</p>
         <h3>Recent Posts</h3>
         {% show_latest_posts 1 %}
+        <p>
+            <a href="{% url 'blog:post_feed' %}">Subscribe to my RSS feed</a>
+        </p>
     </div>
 </body>
 </html>
